projects/automation/n8n/n8n-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-postgres
  namespace: automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-postgres
  template:
    metadata:
      labels:
        app: n8n-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata # Evita problemas con la carpeta lost+found en el PVC
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-n8n-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: automation
spec:
  replicas: 1
  strategy:
    type: Recreate # Importante para que no choquen al intentar montar el mismo PVC
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000 # Asegura que el contenedor pueda acceder al PVC
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
              subPath: n8n-data
            - name: cert-volume
              mountPath: /etc/axis/
              readOnly: true
            - name: bin-volume
              mountPath: /usr/local/bin/axis
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-pvc
        - name: cert-volume
          configMap:
            name: axis-pub-cert
        - name: bin-volume
          emptyDir: {}
