projects/automation/n8n/n8n-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-postgres-svc
  namespace: automation
spec:
  ports:
    - port: 5432
  selector:
    app: n8n-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: automation
spec:
  ports:
    - port: 5678
      targetPort: 5678
  selector:
    app: n8n
