projects/automation/n8n/n8n-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-ingressroute
  namespace: automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.armandogil.es`)
      kind: Rule
      services:
        - name: n8n-service
          port: 5678
  tls:
    secretName: n8n-tls-cert
